# RTL-SDR-Bridge-Android-Lib

./: CMakeLists.txt  README.md  build.gradle.kts
include/: rtl-sdr-bridge-preferences.h  ssb_demod.h  ssb_demod_opt.h
java/fr/intuite/rtlsdrbridge/: RtlSdrBridgeWrapper.kt
src/: rtl-sdr-bridge-java.cpp  ssb_demod.cpp  ssb_demod_boost.cpp  ssb_demod_high.cpp  ssb_demod_opt+boost.cpp  ssb_demod_opt.cpp
